--- a/floatVideo.css
+++ b/floatVideo.css
@@ -1,11 +1,74 @@
+.alert {
+  position: fixed;
+  width: 90%;
+  top: 3px;
+  z-index: 1000;
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  display: block;
+  margin-left: 3.25%;
+  text-align: center;
+}
+
+.alert-success {
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+
+.mnfb-progress-area {
+  height: 10px;
+  position: absolute;
+  bottom: -5px;
+  width: 100%;
+  z-index: 1002;
+  cursor: pointer;
+}
+
+.mnfb-progress-wrap {
+  background: #cc181e;
+  overflow: hidden;
+  position: absolute;
+  bottom: 5px;
+}
+
+.mnfb-progress-bar {
+  background: #ddd;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.mnfb-progress-pointer {
+  cursor: pointer;
+  position: absolute;
+  left: 0;
+  bottom: 3px;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background: #cc181e;
+  display: none;
+  z-index: 1002;
+}
+
+.mnfb-progress {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+}
+
 .mnfb-btn {
   position: absolute;
   padding: 2px;
   margin: 2px;
-  color: white;
-  border: 1px solid white;
+  color: #fff;
+  border: 1px solid #fff;
   border-radius: 4px;
   cursor: pointer;
+  z-index: 1001;
 }
 
 #minifacebook {
@@ -21,6 +84,21 @@
 #mnfb-video {
   width: 310px;
   height: 175px;
+}
+
+.resizer {
+  width: 50px;
+  height: 50px;
+  position:absolute;
+  z-index: 1001;
+}
+
+.resize-icon {
+  right: -3px;
+  bottom: -3px;
+  position:absolute;
+  z-index: 1001;
+  cursor: se-resize;
 }
 
 #mnfb-br {
@@ -51,7 +129,7 @@
 
   width: 30px;
   height: 30px;
-  background: rgba(23,35,34,.75);
+  background: rgba(23,35,34,.5);
   border-radius: 0.5em;
   border: 0;
   cursor: pointer;
