--- a/floatVideo.css
+++ b/floatVideo.css
@@ -62,14 +62,15 @@
 
 .mnfb-btn {
   position: absolute;
-  padding: 2px;
-  margin: 2px;
+  padding: 2px 6px 2px 6px;
+  margin: 3px;
   color: #fff;
-  border: 1px solid #fff;
-  border-radius: 4px;
+  font-weight: bold;
+  border: 1px solid #3b5998;
+  border-radius: 2px;
   cursor: pointer;
   z-index: 1001;
-  background: rgba(23,35,34,.5);
+  background-color: #3b5998;
 }
 
 #minifacebook {
