--- a/floatVideo.css
+++ b/floatVideo.css
@@ -1,3 +1,67 @@
+.mnfb-play-button {
+  margin-left: auto;
+  margin-right: auto;
+
+  display: block;
+  position: relative;
+  top: -50%;
+  transform: translateY(-50%);
+
+  border-radius: 50%;
+  background: rgba(23,35,34,.75);
+  border: 0;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+
+  transition: background-color 40ms;
+  text-decoration: none;
+  color:#ffffff;
+  display: none;
+}
+
+.mnfb-play-button:hover {
+  background-color: #3b5998;
+}
+
+.mnfb-play-button-play {
+  width: 0;
+  height: 0;
+  border-bottom: 10px solid transparent;
+  border-top: 10px solid transparent;
+  border-left: 15px solid white;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  display: none;
+}
+
+.mnfb-play-button-pause {
+  display: none;
+}
+
+.mnfb-play-button-pause:before {
+  width: 8px;
+  height: 24px;
+  background-color: #FFFFFF;
+  position: absolute;
+  content: "";
+  top: 13px;
+  left: 15px;
+}
+
+.mnfb-play-button-pause:after {
+  width: 8px;
+  height: 24px;
+  background-color: #FFFFFF;
+  position: absolute;
+  content: "";
+  top: 13px;
+  right: 15px;
+}
+
 .alert {
   position: fixed;
   width: 90%;
@@ -84,8 +148,8 @@
 }
 
 #mnfb-video {
-  width: 310px;
-  height: 175px;
+  top: 0px !important;
+  left: 0px !important;
 }
 
 .resizer {
