Added functionality to queue and play videos

--- a/floatVideo.css
+++ b/floatVideo.css
@@ -93,6 +93,12 @@
   border-color: #d6e9c6;
 }
 
+.alert-info {
+  color: #31708f;
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+}
+
 .mnfb-progress-area {
   height: 15px;
   position: absolute;
