--- a/floatVideo.css
+++ b/floatVideo.css
@@ -20,6 +20,7 @@
 
   border-radius: 50%;
   background: rgba(23,35,34,.75);
+  opacity: 0.5;
   border: 0;
   cursor: pointer;
   width: 50px;
@@ -33,6 +34,7 @@
 
 .mnfb-play-button:hover {
   background-color: #3b5998;
+  opacity: 1;
 }
 
 .mnfb-play-button-play {
@@ -41,7 +43,7 @@
   border-bottom: 10px solid transparent;
   border-top: 10px solid transparent;
   border-left: 15px solid white;
-  margin-left: auto;
+  margin-left: 19px;
   margin-right: auto;
   position: relative;
   top: 50%;
@@ -208,6 +210,7 @@
   width: 30px;
   height: 30px;
   background: rgba(23,35,34,.5);
+  opacity: 0.5;
   border-radius: 0.5em;
   border: 0;
   cursor: pointer;
@@ -231,6 +234,7 @@
 
 .mnfb-size-button:hover {
   background-color: #3b5998;
+  opacity: 1;
 }
 
 .mnfb-pin-label {
