--- a/floatVideo.css
+++ b/floatVideo.css
@@ -195,12 +195,21 @@
   display: none;
 }
 
-#mnfb-close-button {
+.mnfb-control-icons-right {
   position: absolute;
   top: 3px;
   right:3px;
-  border-radius: 50%;
   display: none;
+}
+
+#mnfb-close-button {
+  border-radius: 50%;
+}
+
+#mnfb-replay-button {
+  border-radius: 50%;
+  font-size: 18px;
+  font-weight: bolder;
 }
 
 .mnfb-size-button {
